--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">2023년은 나의 해~!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">수영 뽀개기</div>
+        <div class="bucket img1 center done">수영 뽀개기</div>
         <div class="bucket img2 center">8kg 감량하기</div>
         <div class="bucket img2 center">수익 창출: 취뽀 or 나만의 일</div>
         <div class="bucket img1 center">경매 스터디하기</div>
